changes to information about me

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="Vasilij Siskov profile picture" />
+        <img
+          src="./assets/profile-pic.png"
+          alt="Vasilij Siskov profile picture"
+        />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -47,7 +50,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/CV-Vasilij Siskov.pdf')"
           >
             Download CV
           </button>
@@ -60,13 +63,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://www.linkedin.com/in/vasilij-siskov-4812775a/'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/Siskov'"
           />
         </div>
       </div>
@@ -91,7 +94,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>5+ years Logistics & warehousing<br />5+ years Business Developement</p>
             </div>
             <div class="details-container">
               <img
@@ -100,17 +103,20 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>B.Sc. Business processes and projects management<br />Openclassrooms Course, Web Developer</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              Generally, I find myself friendly, outgoing, kind and positive. From professional point
+of view, I love to work as a team member. I am responsible, loyal, organised and
+trained well enough to work in various environments. I have
+experience working in busy, multicultural & business oriented environment’s. As a
+recent graduate from Openclassroom's Web Developer course, I am looking for a
+position that I can utilise my skills from my education, previous experience, and
+technical skills acquired to make an impact on your company success. As a recent
+graduate, I am trained on the industry's most up-to-date skills while growing my own
+skills which include (HTML, CSS and SASS).
             </p>
           </div>
         </div>
@@ -297,13 +303,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Siskov/OpenclassroomsProject'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://siskov.github.io/OpenclassroomsProject/index.html'"
               >
                 Live Demo
               </button>
@@ -352,7 +358,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:vasilij.siskov@me.com">vasilij.siskov@me.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -360,7 +366,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/vasilij-siskov-4812775a/">LinkedIn</a></p>
         </div>
       </div>
     </section>
