links to project booki

--- a/index.html
+++ b/index.html
@@ -279,13 +279,13 @@ skills which include (HTML, CSS and SASS).
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Siskov/Openclassrooms_project_01/'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://siskov.github.io/Openclassrooms_project_01/'"
               >
                 Live Demo
               </button>
