--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ skills which include (HTML, CSS and SASS).
                   class="icon"
                 />
                 <div>
-                  <h3>TypeScript</h3>
+                  <h3>Git</h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -205,7 +205,7 @@ skills which include (HTML, CSS and SASS).
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Transferable skills</h2>
             <div class="article-container">
               <article>
                 <img
@@ -214,18 +214,7 @@ skills which include (HTML, CSS and SASS).
                   class="icon"
                 />
                 <div>
-                  <h3>PostgreSQL</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Node JS</h3>
+                  <h3>Customer service</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -236,7 +225,7 @@ skills which include (HTML, CSS and SASS).
                   class="icon"
                 />
                 <div>
-                  <h3>Express JS</h3>
+                  <h3>Microsoft 360</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -247,7 +236,18 @@ skills which include (HTML, CSS and SASS).
                   class="icon"
                 />
                 <div>
-                  <h3>Git</h3>
+                  <h3>Problem-solving</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>proactive attitude towards learning </h3>
                   <p>Intermediate</p>
                 </div>
               </article>
