--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ skills which include (HTML, CSS and SASS).
                 />
                 <div>
                   <h3>Git</h3>
-                  <p>Basic</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
