--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ skills which include (HTML, CSS and SASS).
                   class="icon"
                 />
                 <div>
-                  <h3>proactive attitude towards learning </h3>
+                  <h3>proactive learning</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
