--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ skills which include (HTML, CSS and SASS).
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Booki Desctop first web site</h2>
+            <h2 class="experience-sub-title project-title">Booki</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -299,7 +299,7 @@ skills which include (HTML, CSS and SASS).
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Ohmyfood mobile first website</h2>
+            <h2 class="experience-sub-title project-title">Ohmyfood</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
